--- a/www/package.json
+++ b/www/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.1.7",
     "bootstrap": "^4.6.0",
     "country-flag-icons": "^1.2.9",
+    "date-fns": "^2.19.0",
     "gaugeJS": "^1.3.7",
     "lodash.uniq": "^4.5.0",
     "rc-tooltip": "^5.1.0",
@@ -22,7 +23,6 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
-    "react-gaugejs": "^1.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -32,7 +32,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "yarn tsc",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
