--- a/www/package.json
+++ b/www/package.json
@@ -4,15 +4,6 @@
   "private": true,
   "homepage": "dashlord/",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.36",
-    "@types/react": "^17.0.3",
-    "@types/react-bootstrap": "^0.32.25",
-    "@types/react-dom": "^17.0.2",
-    "@types/react-router-dom": "^5.1.7",
     "bootstrap": "^4.6.0",
     "country-flag-icons": "^1.2.9",
     "date-fns": "^2.19.0",
@@ -33,7 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "yarn tsc",
+    "test": "yarn tsc && react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -59,13 +50,24 @@
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.12",
     "@socialgouv/eslint-config-strict": "^1.0.0-beta.5",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.20",
     "@types/lodash.uniq": "^4.5.6",
+    "@types/node": "^14.14.36",
+    "@types/react": "^17.0.3",
+    "@types/react-bootstrap": "^0.32.25",
+    "@types/react-dom": "^17.0.2",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.22.0",
     "eslint-config-react-app": "^6.0.0",
     "prettier": "^2.2.1",
+    "react-test-renderer": "^17.0.2",
     "sass": "^1.32.8"
   }
 }
