--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "scripts": {
     "test": "jest"
   },
+  "jest": {
+    "modulePathIgnorePatterns": ["<rootDir>/www"]
+  },
   "devDependencies": {
     "@socialgouv/eslint-config-strict": "^1.0.0-beta.5",
     "@types/jest": "^26.0.22",
