--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "license": "Apache-2.0",
   "types": "index.d.ts",
   "dependencies": {
-    "date-fns": "^2.19.0",
     "lodash.omit": "^4.5.0",
     "lodash.pick": "^4.4.0",
     "yaml": "^1.10.2"
   },
   "scripts": {
     "test": "jest"
+  },
+  "jest": {
+    "modulePathIgnorePatterns": ["<rootDir>/www"]
   },
   "devDependencies": {
     "@socialgouv/eslint-config-strict": "^1.0.0-beta.5",
