--- a/www/package.json
+++ b/www/package.json
@@ -8,9 +8,11 @@
     "country-flag-icons": "^1.2.9",
     "date-fns": "^2.21.1",
     "gaugeJS": "^1.3.7",
+    "lodash.orderby": "^4.6.0",
     "lodash.uniq": "^4.5.0",
     "rc-tooltip": "^5.1.0",
     "react": "^17.0.2",
+    "react-base-table": "^1.12.0",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
@@ -54,6 +56,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.1",
     "@types/jest": "^26.0.22",
+    "@types/lodash.orderby": "^4.6.6",
     "@types/lodash.uniq": "^4.5.6",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
